# GOP

./: .cproject  .gitignore  .project  CMakeLists.txt  Mazzo Carte  main.cpp
lib/: Game.cpp  Game.hpp  Mazzo.cpp  Mazzo.hpp  carte.hpp  utils.hpp
lib/carta/: Carta.cpp  Carta.hpp
lib/casella/: Casella.cpp  Casella.hpp
lib/casella/fine/: CasellaFine.hpp
lib/casella/inizio/: CasellaInizio.cpp  CasellaInizio.hpp
lib/casella/perdiTurni/: CasellaPerdiTurni.cpp  CasellaPerdiTurni.hpp
lib/casella/pesca/: CasellaPesca.hpp
lib/casella/sposta/: CasellaSposta.hpp
lib/giocatore/: Giocatore.cpp  Giocatore.hpp
lib/tabellone/: Tabellone.cpp  Tabellone.hpp
src/: main.cpp
src/lib/: Game.cpp  Game.hpp  carte.hpp  carte_blu.hpp  carte_rosso.hpp  utils.cpp  utils.hpp
src/lib/carta/: Carta.cpp  Carta.hpp
src/lib/casella/: Casella.cpp  Casella.hpp
src/lib/casella/fine/: CasellaFine.cpp
src/lib/casella/perdiTurni/: CasellaPerdiTurni.cpp  CasellaPerdiTurni.hpp
src/lib/casella/pesca/: CasellaPesca.cpp
src/lib/casella/pesca_blu/: CasellaPesca_Blu.cpp  CasellaPesca_Blu.hpp
src/lib/casella/pesca_rosso/: CasellaPesca_Rosso.cpp  CasellaPesca_Rosso.hpp
src/lib/casella/scambia/: CasellaScambia.cpp  CasellaScambia.hpp
src/lib/casella/sposta/: CasellaSposta.cpp
src/lib/casella/tornaInizio/: CasellaTornaInizio.cpp  CasellaTornaInizio.hpp
